Made CategoryMap with cursor but small bug